--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-github-corner": "^2.5.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.5",
