--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-github-corner": "^2.5.0",
+    "react-parallax-tilt": "^1.7.102",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.5",
