Added new resume

--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "checkly": "^4.4.0",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "latest",
+    "typescript": "latest"
   }
 }
